# agent-workspace

./: .gitignore  AGENT_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLANS.md  README.md  ROADMAP.md  SDK_SPEC.md  SECURITY.md  SHOW_HN.md  agent-reputation-capability-spec.md  agent_workspace_rfc_prd_spec.md  config.json  docker-compose.yml  plano-5k-stars-github-agent-workspace.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  built_with.md  feature_request.md
.github/workflows/: ci.yml
agent-workspace-sdk/: README.md  pyproject.toml
agent-workspace-sdk-ts/: README.md  package-lock.json  package.json
agent-workspace-sdk-ts/src/: client.ts  errors.ts  index.ts  session.ts  types.ts
agent-workspace-sdk-ts/tests/: smoke.ts
agent-workspace-sdk/agent_workspace/: __init__.py  client.py  exceptions.py  models.py  session.py
agent-workspace-sdk/tests/: smoke.py
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/api/src/handlers/: agents.rs  dependencies.rs  events.rs  handoffs.rs  inbox.rs  locks.rs  messages.rs  mod.rs  reputation.rs  sessions.rs  summary.rs  tasks.rs
crates/api/tests/: integration.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  error.rs  lib.rs  storage.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs  server.rs  tools.rs
crates/mcp/src/tools/: agent.rs  dependency.rs  handoff.rs  lock.rs  message.rs  mod.rs  summary.rs  task.rs
crates/storage-postgres/: Cargo.toml
crates/storage-postgres/migrations/: 0001_init.sql  0002_reputation.sql  0003_full_reputation.sql  0004_eligibility_policies.sql
crates/storage-postgres/src/: adapter.rs  lib.rs  rows.rs
crates/storage-postgres/tests/: integration.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/migrations/: 0001_init.sql  0003_full_reputation.sql  0004_eligibility_policies.sql
crates/storage-sqlite/src/: adapter.rs  lib.rs  rows.rs
crates/storage-sqlite/tests/: integration.rs
crates/storage-tests/: Cargo.toml
crates/storage-tests/src/: lib.rs
examples/company-briefing/: compiler.py  coordinator.py  requirements.txt  researcher.py  run.sh
examples/researcher-writer/: README.md  coordinator.py  requirements.txt  researcher.py  run.sh  writer.py
examples/support-handoff/: README.md  l1_support.ts  l2_support.py  package.json  requirements.txt  run.sh
examples/ticket-triage/: README.md  package.json  tsconfig.json
examples/ticket-triage/src/: index.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.js  style.css
scripts/demo/: demo.py  demo.tape
