[workspace]
members = [
    "crates/domain",
    "crates/storage-sqlite",
    "crates/storage-postgres",
    "crates/mcp",
    "crates/api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DB
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "uuid", "chrono", "json"] }

# MCP SDK
rmcp = { version = "1.4", features = ["server", "macros", "schemars", "transport-io"] }
schemars = { version = "1.0", features = ["chrono04", "uuid1"] }

# HTTP
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Config
dotenvy = "0.15"
