[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-workspace-sdk"
version = "0.1.0"
description = "SDK for connecting AI agents to the Agent Workspace coordination hub"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_workspace"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
