[package]
name = "aw-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aw-api"
path = "src/main.rs"

[dependencies]
aw-domain = { path = "../domain" }
aw-storage-sqlite = { path = "../storage-sqlite" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
