[package]
name = "aw-storage-sqlite"
version.workspace = true
edition.workspace = true

[dependencies]
aw-domain = { path = "../domain" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }

[dev-dependencies]
aw-storage-tests = { path = "../storage-tests" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true

